# keystone-platform

./: .editorconfig  .gitattributes  .gitignore  .prettierrc.json  .sqlfluff  .stylelintrc.json  CLAUDE.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml
.claude/: settings.json
.claude/agents/: a11y-reviewer.md  python-reviewer.md  react-reviewer.md  semantic-html-auditor.md  sql-reviewer.md
.claude/commands/: new-feature.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api/: conftest.py  manage.py  pyproject.toml
apps/api/apps/accounts/: admin.py  apps.py  exceptions.py  urls.py
apps/api/apps/accounts/api/: account_urls.py  audit_urls.py  invite_urls.py  urls.py  users_urls.py
apps/api/apps/accounts/api/serializers/: __init__.py  account_serializer.py  account_update_serializer.py  audit_event_serializer.py  change_password_serializer.py  email_verification_confirm_serializer.py  invite_serializers.py  me_update_serializer.py  mfa_serializers.py  mfa_verify_serializer.py  password_reset_confirm_serializer.py  password_reset_request_serializer.py  sign_in_serializer.py  sign_up_serializer.py  user_detail_serializer.py  user_list_item_serializer.py  user_serializer.py
apps/api/apps/accounts/api/views/: __init__.py  _audit.py  _errors.py  account_view.py  audit_list_view.py  change_password_view.py  email_verification_confirm_view.py  email_verification_request_view.py  invite_accept_view.py  invite_detail_view.py  invite_preview_view.py  invites_list_create_view.py  me_view.py  mfa_disable_view.py  mfa_regenerate_codes_view.py  mfa_setup_confirm_view.py  mfa_setup_start_view.py  mfa_status_view.py  mfa_verify_view.py  password_reset_confirm_view.py  password_reset_request_view.py  sign_in_view.py  sign_out_view.py  sign_up_view.py  user_detail_view.py  users_list_view.py
apps/api/apps/accounts/audit/: __init__.py  constants.py  context.py
apps/api/apps/accounts/emails/: __init__.py  send_email_verification_email.py  send_invite_email.py  send_password_reset_email.py
apps/api/apps/accounts/managers/: __init__.py  user_manager.py
apps/api/apps/accounts/middleware/: __init__.py  rls.py
apps/api/apps/accounts/migrations/: 0001_initial.py  0002_mfarecoverycode.py  0003_account.py  0004_backfill_user_tenants.py  0005_user_tenant_fk_not_null.py  0006_user_email_verified_at.py  0007_backfill_email_verified_at.py  0008_user_profile_fields.py  0009_account_owner_and_invite.py  0010_backfill_account_owner.py  0011_audit_event.py  0012_rls_policies.py  0013_app_role.py
apps/api/apps/accounts/models/: __init__.py  _uuid.py  account.py  audit_event.py  invite.py  mfa_recovery_code.py  user.py
apps/api/apps/accounts/security/: __init__.py  rls.py
apps/api/apps/accounts/selectors/: __init__.py  get_user_by_email.py  get_user_by_id.py  list_audit_events.py  list_invites.py  list_users.py
apps/api/apps/accounts/services/: __init__.py  _account_naming.py  _email_verification_token.py  _invite_token.py  _mfa_helpers.py  accept_invite.py  change_password.py  confirm_password_reset.py  mfa_confirm_setup.py  mfa_disable.py  mfa_get_status.py  mfa_regenerate_recovery_codes.py  mfa_start_setup.py  mfa_verify_challenge.py  preview_invite.py  record_audit_event.py  request_password_reset.py  revoke_invite.py  send_email_verification.py  send_invite.py  sign_in.py  sign_out.py  sign_up.py  update_profile.py  update_tenant.py  verify_email.py
apps/api/apps/accounts/templates/accounts/emails/: email_verification_body.html  email_verification_body.txt  email_verification_subject.txt  invite_body.html  invite_body.txt  invite_subject.txt  password_reset_body.html  password_reset_body.txt  password_reset_subject.txt
apps/api/apps/accounts/tests/: _mfa_helpers.py  factories.py  test_rls_policies.py
apps/api/apps/accounts/tests/api/: test_account_update_view.py  test_account_view.py  test_audit_list_view.py  test_change_password_view.py  test_email_verification_confirm_view.py  test_email_verification_request_view.py  test_invites_views.py  test_me_update.py  test_me_view.py  test_mfa_verify_view.py  test_mfa_views.py  test_password_reset_confirm_view.py  test_password_reset_request_view.py  test_sign_in_view.py  test_sign_out_view.py  test_sign_up_view.py  test_tenant_owner_permission.py  test_throttling.py  test_user_detail_view.py  test_users_list_view.py
apps/api/apps/accounts/tests/models/: test_account.py
apps/api/apps/accounts/tests/selectors/: test_get_user_by_id.py  test_list_users.py
apps/api/apps/accounts/tests/services/: test_accept_invite.py  test_audit_instrumentation.py  test_change_password.py  test_confirm_password_reset.py  test_mfa_confirm_setup.py  test_mfa_disable.py  test_mfa_get_status.py  test_mfa_regenerate_recovery_codes.py  test_mfa_start_setup.py  test_mfa_verify_challenge.py  test_record_audit_event.py  test_request_password_reset.py  test_revoke_invite.py  test_send_email_verification.py  test_send_invite.py  test_sign_out.py  test_sign_up.py  test_update_profile.py  test_update_tenant.py  test_verify_email.py
apps/api/config/: api_v1_urls.py  asgi.py  authentication.py  exception_handler.py  permissions.py  urls.py  wsgi.py
apps/api/config/settings/: base.py  dev.py  prod.py  test.py
apps/api/tests/: test_smoke.py
apps/web/: eslint.config.mjs  next.config.mjs  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/(auth)/: layout.tsx
docs/: 00_overview.md
docs/01_architecture/: auth.md  data-model.md  monorepo.md  security.md  stack.md
docs/02_standards/: accessibility.md  css-sass.md  git-workflow.md  javascript.md  project-structure.md  python.md  react.md  semantic-html.md  sql.md  tailwind.md  testing.md  typescript.md
docs/03_ux/: dashboard-layout.md  data-display.md  design-tokens.md  forms.md  theming.md
docs/04_ai/: agents.md  decisions-log.md  prompting.md  review-checklist.md
(+117 files in other folders)
