[project]
name = "rlv-platform"
version = "0.0.0"
description = "Full-stack starter — Django + Next.js + Postgres."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "node_modules", ".next", "migrations"]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pycodestyle / pyflakes
  "I",                 # isort
  "N",                 # naming
  "D",                 # pydocstyle
  "UP",                # pyupgrade
  "B",                 # bugbear
  "S",                 # bandit (security)
  "A",                 # builtins shadowing
  "C4",                # comprehensions
  "DJ",                # flake8-django
  "PIE", "PT", "RET",
  "SIM",               # simplify
  "TID",               # tidy imports
  "PL",                # pylint subset
  "RUF",
]
ignore = [
  "D100",  # missing module docstring (allow short modules)
  "D104",  # missing __init__ docstring
  "D203",  # one-blank-line-before-class (conflicts with D211)
  "D213",  # multi-line-summary-second-line (conflicts with D212)
  "S101",  # assert in tests
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["D", "N", "E501"]
"**/tests/**" = ["D", "S", "PLR2004"]
"**/settings/*.py" = ["S105", "S106"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.dev"

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra --strict-markers --tb=short"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
omit = ["*/migrations/*", "*/tests/*", "manage.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
