[project]
name = "keystone"
version = "0.0.0"
description = "Keystone — full-stack starter for web and dashboard projects (Django + Next.js + Postgres)."
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["apps/api"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "node_modules", ".next", "migrations"]

[tool.ruff.lint]
select = [
  "E", "F", "W",      # pycodestyle / pyflakes
  "I",                 # isort
  "N",                 # naming
  "D",                 # pydocstyle
  "UP",                # pyupgrade
  "B",                 # bugbear
  "S",                 # bandit (security)
  "A",                 # builtins shadowing
  "C4",                # comprehensions
  "DJ",                # flake8-django
  "PIE", "PT", "RET",
  "SIM",               # simplify
  "TID",               # tidy imports
  "PL",                # pylint subset
  "RUF",
]
ignore = [
  "D100",  # missing module docstring (allow short modules)
  "D104",  # missing __init__ docstring
  "D105",  # magic method docstring (e.g. __str__, __repr__)
  "D107",  # __init__ docstring
  "D203",  # one-blank-line-before-class (conflicts with D211)
  "D213",  # multi-line-summary-second-line (conflicts with D212)
  "N818",  # exception name suffix — project uses domain-style names (QuotaExceeded)
  "S101",  # assert in tests
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["D", "N", "E501"]
"**/tests/**" = ["D", "S", "PLR2004"]
"**/settings/*.py" = ["S105", "S106"]
# DRF nested Meta classes + thin view methods don't earn their own docstrings.
"**/api/views/*.py" = ["D102"]
"**/api/serializers/*.py" = ["D106"]
"**/models/*.py" = ["D106"]  # Django Meta nested class
"**/admin.py" = ["D"]
"**/authentication.py" = ["D102"]  # one-line auth header overrides

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# Django/pytest/mypy/coverage config lives in apps/api/pyproject.toml so that it
# scopes to the API project. The root pyproject keeps only repo-wide Python lint
# (Ruff) and the uv workspace declaration.
